--- a/src/public/index.html
+++ b/src/public/index.html
@@ -37,6 +37,7 @@
                 <button name="1">1</button>
                 <button name="2">2</button>
                 <button name="3">3</button>
+                <button name="sqrt">sqrt</button>
             </div>
 
             <div class="rows">
