FEAT: Se agrego el historial a la interfaz

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -44,7 +44,21 @@
                 <button name="c">c</button>
                 <button name="=">=</button>
             </div>
+            <h1>
+                asdasdas
+            </h1>
         </div>
+    </div>
+    <div class="calc">
+        <div class="hisotries">
+            <div class="rows">
+                <button name="getAllHistory">Ver historial</button>
+                <button name="??">??</button>
+                <button name="??">??</button>
+                <button name="??">??</button>
+            </div> 
+        </div>           
+        <textarea class="histories-display" data-testid="histories" readonly></textarea>
     </div>
     <script src="./index.js"></script>
 </body>
