FEAT: se agrego el limpiar pantalla del listado de historias

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -55,7 +55,7 @@
                 <button name="getAllHistory">Ver historial</button>
                 <button name="??">??</button>
                 <button name="??">??</button>
-                <button name="??">??</button>
+                <button name="clearScreen">Limpiar pantalla</button>
             </div> 
         </div>           
         <textarea class="histories-display" data-testid="histories" readonly></textarea>
