FEAT: Se agrego el boton para eliminar el historial

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -52,7 +52,7 @@
         <div class="hisotries">
             <div class="rows">
                 <button name="getAllHistory">Ver historial</button>
-                <button name="??">??</button>
+                <button name="deleteAllHistory">Borrar historial</button>
                 <button name="??">??</button>
                 <button name="clearScreen">Limpiar pantalla</button>
             </div> 
