feature: Se implementó un botón para cambiar entre modo claro y oscuro

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+    <div id="container">
+        <div class="toggle"></div>
+    </div>
     <div class="calc">
         <input type="text" class="display" data-testid="display" readonly>
         <div class="buttons">
